--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,24 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'variables.scss';
+
+html, body {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  width: 100%;
+  height: 100%;
+}
+
+.wrapper {
+  width: 100vw;
+  max-width: 100%;
+  text-align: center;
+
+  .title {
+    font-size: 3em;
+    margin: 2em auto 1em auto;
+  }
+}
